profiling-using-exp-runner/backup_FINAL_RESULTS/reverse_experiment_1/run_0_repetition_0/energibridge.log
sampling interval: 200, target function: reverse_string, input size: abcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcde
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.reverse as module; X = abcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcde; module.reverse_string(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.427078227996825 for 0.23027837 sec of execution.
